syntax = "proto3";

package common;

service Common {
    rpc getClassById(getClassByIdReq) returns (getClassByIdRes) {}
}

message getClassByIdReq {
    string requestId = 1;
    string _id = 2;
}

message getClassByIdRes {
    string _id = 1;
    string name = 2;
}